# chymusic

./: .gitignore  MusicWeb.csproj  MusicWeb.slnx  Program.cs  README.md  ReadMe.md  _Imports.razor  package.json
Components/: AudioPlayer.razor  PlayerBar.razor  PlayerBar.razor.css  PlaylistSelector.razor  QueuePanel.razor
Data/: MusicCatalog.cs  Playlist.cs
Layout/: MainLayout.razor  MainLayout.razor.css  NavMenu.razor  NavMenu.razor.css
Models/: Album.cs  AlbumCategory.cs  AlbumTag.cs  MusicDbContext.cs  Track.cs
Pages/: AlbumDetails.razor  ArtistDetails.razor  Artists.razor  GenreDetails.razor  Genres.razor  Home.razor  PlaylistDetails.razor  Playlists.razor  QueuePage.razor  Search.razor
Services/: MusicCatalogService.cs  MusicSearchService.cs  PlaybackService.cs  PlaylistService.cs
docs/: ARCHITECTURE.md  CONTRIBUTING.md  EXTENSION.md  SCHEMA.md  SMART_SHUFFLE.md
scripts/: build_music_data.py  (+1 more)
services/admin-api/: .env.example  README.md  pyproject.toml
services/admin-api/app/: __init__.py  main.py
services/admin-api/app/api/: deps.py
services/admin-api/app/api/v1/: auth.py  catalog.py  content.py  ingest.py  scrape.py
services/admin-api/app/core/: config.py  db.py  security.py
services/admin-api/app/models/: __init__.py  artist.py  collection.py  content.py  scrape_job.py  user.py
services/admin-api/app/schemas/: __init__.py  auth.py  content.py  scrape.py
services/admin-api/app/scrapers/: __init__.py  base.py  kashoob.py  musicsbaran.py  rss.py
services/admin-api/app/services/: __init__.py  classifier.py  cleaner.py  exporter.py
(+78 files in other folders)
